Bmoric/pass the generation to the catalog (#12013)