@@ -8,6 +8,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
@@ -49,6 +50,7 @@ import io.airbyte.config.persistence.RefreshJobStateUpdater;
 import io.airbyte.config.persistence.StatePersistence;
 import io.airbyte.config.persistence.StreamRefreshesRepository;
 import io.airbyte.config.persistence.domain.StreamRefresh;
+import io.airbyte.config.persistence.helper.CatalogGenerationSetter;
 import io.airbyte.config.persistence.helper.GenerationBumper;
 import io.airbyte.config.provider.ResourceRequirementsProvider;
 import io.airbyte.featureflag.ActivateRefreshes;
@@ -58,9 +60,6 @@ import io.airbyte.featureflag.OrchestratorResourceOverrides;
 import io.airbyte.featureflag.SourceResourceOverrides;
 import io.airbyte.featureflag.TestClient;
 import io.airbyte.featureflag.UseResourceRequirementsVariant;
-import io.airbyte.protocol.models.AirbyteGlobalState;
-import io.airbyte.protocol.models.AirbyteStateMessage;
-import io.airbyte.protocol.models.AirbyteStreamState;
 import io.airbyte.protocol.models.CatalogHelpers;
 import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
 import io.airbyte.protocol.models.ConfiguredAirbyteStream;
@@ -70,8 +69,6 @@ import io.airbyte.protocol.models.JsonSchemaType;
 import io.airbyte.protocol.models.StreamDescriptor;
 import io.airbyte.protocol.models.SyncMode;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -126,6 +123,7 @@ class DefaultJobCreatorTest {
   private ResourceRequirements sourceResourceRequirements;
   private ResourceRequirements destResourceRequirements;
   private GenerationBumper generationBumper;
+  private CatalogGenerationSetter catalogGenerationSetter;
 
   private static final JsonNode PERSISTED_WEBHOOK_CONFIGS;
 
@@ -235,14 +233,16 @@ class DefaultJobCreatorTest {
     when(resourceRequirementsProvider.getResourceRequirements(any(), any(), any()))
         .thenReturn(workerResourceRequirements);
     generationBumper = mock(GenerationBumper.class);
+    catalogGenerationSetter = mock(CatalogGenerationSetter.class);
     jobCreator =
-        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, new TestClient(), generationBumper, statePersistence,
+        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, new TestClient(), generationBumper, catalogGenerationSetter,
+            statePersistence,
             refreshJobStateUpdater,
             streamRefreshesRepository);
   }
 
   @Test
-  void testCreateRefreshJobWithStreamState() throws IOException {
+  void testCreateRefreshJob() throws IOException {
     final String streamToRefresh = "name";
     final String streamToNotRefresh = "stream-not-refresh";
     final String streamNamespace = "namespace";
@@ -252,25 +252,14 @@ class DefaultJobCreatorTest {
     when(mFeatureFlagClient.stringVariation(eq(UseResourceRequirementsVariant.INSTANCE), any())).thenReturn("default");
     when(jobPersistence.enqueueJob(any(), any())).thenReturn(Optional.of(1L));
 
-    final AirbyteStateMessage stateMessageFromRefreshStream = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.STREAM)
-        .withStream(new AirbyteStreamState()
-            .withStreamDescriptor(new StreamDescriptor().withName(streamToRefresh).withNamespace(streamNamespace))
-            .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor", 1))));
-
-    final AirbyteStateMessage stateMessageFromNonRefreshStream = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.STREAM)
-        .withStream(new AirbyteStreamState()
-            .withStreamDescriptor(new StreamDescriptor().withName(streamToNotRefresh).withNamespace(streamNamespace))
-            .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor-2", 2))));
-
     final StateWrapper stateWrapper = new StateWrapper().withStateType(StateType.STREAM)
-        .withStateMessages(Arrays.asList(stateMessageFromRefreshStream, stateMessageFromNonRefreshStream));
+        .withStateMessages(List.of());
 
     when(statePersistence.getCurrentState(STANDARD_SYNC.getConnectionId())).thenReturn(Optional.of(stateWrapper));
 
     jobCreator =
-        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper, statePersistence,
+        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper, catalogGenerationSetter,
+            statePersistence,
             refreshJobStateUpdater,
             streamRefreshesRepository);
 
@@ -310,6 +299,9 @@ class DefaultJobCreatorTest {
     List<StreamRefresh> refreshes =
         List.of(new StreamRefresh(UUID.randomUUID(), STANDARD_SYNC.getConnectionId(), streamToRefresh, streamNamespace, null));
 
+    when(catalogGenerationSetter.updateCatalogWithGenerationAndSyncInformation(any(), any(), anyLong(), any()))
+        .thenReturn(STANDARD_SYNC.getCatalog());
+
     jobCreator.createRefreshConnection(
         STANDARD_SYNC,
         SOURCE_IMAGE_NAME,
@@ -327,103 +319,14 @@ class DefaultJobCreatorTest {
 
     verify(jobPersistence).enqueueJob(expectedScope, jobConfig);
     verify(generationBumper).updateGenerationForStreams(STANDARD_SYNC.getConnectionId(), JOB_ID, refreshes);
-
+    verify(catalogGenerationSetter).updateCatalogWithGenerationAndSyncInformation(STANDARD_SYNC.getCatalog(),
+        STANDARD_SYNC.getConnectionId(),
+        JOB_ID,
+        refreshes);
+    verify(jobPersistence).updateJobConfig(eq(JOB_ID), any());
     final StateWrapper expected =
-        new StateWrapper().withStateType(StateType.STREAM).withStateMessages(Collections.singletonList(stateMessageFromNonRefreshStream));
-    verify(statePersistence).updateOrCreateState(STANDARD_SYNC.getConnectionId(), expected);
-    verify(streamRefreshesRepository).deleteByConnectionIdAndStreamNameAndStreamNamespace(STANDARD_SYNC.getConnectionId(), streamToRefresh,
-        streamNamespace);
-  }
+        new StateWrapper().withStateType(StateType.STREAM);
 
-  @Test
-  void testCreateRefreshJobWithGlobalState() throws IOException {
-    final String streamToRefresh = "name";
-    final String streamToNotRefresh = "stream-not-refresh";
-    final String streamNamespace = "namespace";
-
-    final FeatureFlagClient mFeatureFlagClient = mock(TestClient.class);
-    when(mFeatureFlagClient.boolVariation(eq(ActivateRefreshes.INSTANCE), any())).thenReturn(true);
-    when(mFeatureFlagClient.stringVariation(eq(UseResourceRequirementsVariant.INSTANCE), any())).thenReturn("default");
-    when(jobPersistence.enqueueJob(any(), any())).thenReturn(Optional.of(1L));
-
-    final AirbyteStreamState stateMessageFromRefreshStream = new AirbyteStreamState()
-        .withStreamDescriptor(new StreamDescriptor().withName(streamToRefresh).withNamespace(streamNamespace))
-        .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor", 1)));
-
-    final AirbyteStreamState stateMessageFromNonRefreshStream = new AirbyteStreamState()
-        .withStreamDescriptor(new StreamDescriptor().withName(streamToNotRefresh).withNamespace(streamNamespace))
-        .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor-2", 2)));
-
-    final JsonNode sharedState = Jsons.jsonNode(ImmutableMap.of("shared-state", 5));
-
-    final AirbyteStateMessage existingStateMessage = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.GLOBAL)
-        .withGlobal(new AirbyteGlobalState().withSharedState(sharedState)
-            .withStreamStates(Arrays.asList(stateMessageFromRefreshStream, stateMessageFromNonRefreshStream)));
-
-    final StateWrapper stateWrapper = new StateWrapper().withStateType(StateType.GLOBAL).withGlobal(existingStateMessage);
-
-    when(statePersistence.getCurrentState(STANDARD_SYNC.getConnectionId())).thenReturn(Optional.of(stateWrapper));
-
-    jobCreator =
-        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper, statePersistence,
-            refreshJobStateUpdater,
-            streamRefreshesRepository);
-
-    final Optional<String> expectedSourceType = Optional.of("database");
-    final ResourceRequirements destStderrResourceRequirements = new ResourceRequirements().withCpuLimit("10");
-    final ResourceRequirements destStdinResourceRequirements = new ResourceRequirements().withCpuLimit("11");
-    final ResourceRequirements destStdoutResourceRequirements = new ResourceRequirements().withCpuLimit("12");
-    final ResourceRequirements heartbeatResourceRequirements = new ResourceRequirements().withCpuLimit("13");
-    final ResourceRequirements srcStderrResourceRequirements = new ResourceRequirements().withCpuLimit("14");
-    final ResourceRequirements srcStdoutResourceRequirements = new ResourceRequirements().withCpuLimit("14");
-
-    mockResourcesRequirement(expectedSourceType,
-        destStderrResourceRequirements,
-        destStdinResourceRequirements,
-        destStdoutResourceRequirements,
-        heartbeatResourceRequirements,
-        srcStderrResourceRequirements,
-        srcStdoutResourceRequirements);
-
-    final SyncResourceRequirements expectedSyncResourceRequirements = getExpectedResourcesRequirement(destStderrResourceRequirements,
-        destStdinResourceRequirements,
-        destStdoutResourceRequirements,
-        heartbeatResourceRequirements,
-        srcStderrResourceRequirements,
-        srcStdoutResourceRequirements);
-
-    final RefreshConfig refreshConfig = getRefreshConfig(expectedSyncResourceRequirements, List.of(
-        new StreamDescriptor().withName(streamToRefresh).withNamespace(streamNamespace)));
-
-    final JobConfig jobConfig = new JobConfig()
-        .withConfigType(ConfigType.REFRESH)
-        .withRefresh(refreshConfig);
-
-    jobCreator.createRefreshConnection(
-        STANDARD_SYNC,
-        SOURCE_IMAGE_NAME,
-        SOURCE_PROTOCOL_VERSION,
-        DESTINATION_IMAGE_NAME,
-        DESTINATION_PROTOCOL_VERSION,
-        List.of(STANDARD_SYNC_OPERATION),
-        PERSISTED_WEBHOOK_CONFIGS,
-        STANDARD_SOURCE_DEFINITION_WITH_SOURCE_TYPE,
-        STANDARD_DESTINATION_DEFINITION,
-        SOURCE_DEFINITION_VERSION,
-        DESTINATION_DEFINITION_VERSION,
-        WORKSPACE_ID,
-        List.of(new StreamRefresh(UUID.randomUUID(), STANDARD_SYNC.getConnectionId(), streamToRefresh, streamNamespace, null)));
-
-    final String expectedScope = STANDARD_SYNC.getConnectionId().toString();
-    verify(jobPersistence).enqueueJob(expectedScope, jobConfig);
-
-    final AirbyteStateMessage expectedStateMessage = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.GLOBAL)
-        .withGlobal(
-            new AirbyteGlobalState().withSharedState(sharedState).withStreamStates(Collections.singletonList(stateMessageFromNonRefreshStream)));
-
-    final StateWrapper expected = new StateWrapper().withStateType(StateType.GLOBAL).withGlobal(expectedStateMessage);
     verify(statePersistence).updateOrCreateState(STANDARD_SYNC.getConnectionId(), expected);
     verify(streamRefreshesRepository).deleteByConnectionIdAndStreamNameAndStreamNamespace(STANDARD_SYNC.getConnectionId(), streamToRefresh,
         streamNamespace);
@@ -452,108 +355,13 @@ class DefaultJobCreatorTest {
   }
 
   @Test
-  void testCreateRefreshJobWithFullGlobalState() throws IOException {
-    final String streamToRefresh = "name";
-    final String streamToRefresh2 = "stream-refresh2";
-    final String streamNamespace = "namespace";
-
-    final FeatureFlagClient mFeatureFlagClient = mock(TestClient.class);
-    when(mFeatureFlagClient.boolVariation(eq(ActivateRefreshes.INSTANCE), any())).thenReturn(true);
-    when(mFeatureFlagClient.stringVariation(eq(UseResourceRequirementsVariant.INSTANCE), any())).thenReturn("default");
-    when(jobPersistence.enqueueJob(any(), any())).thenReturn(Optional.of(1L));
-
-    final AirbyteStreamState stateMessageFromRefreshStream = new AirbyteStreamState()
-        .withStreamDescriptor(new StreamDescriptor().withName(streamToRefresh).withNamespace(streamNamespace))
-        .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor", 1)));
-
-    final AirbyteStreamState stateMessageFromNonRefreshStream = new AirbyteStreamState()
-        .withStreamDescriptor(new StreamDescriptor().withName(streamToRefresh2).withNamespace(streamNamespace))
-        .withStreamState(Jsons.jsonNode(ImmutableMap.of("cursor-2", 2)));
-
-    final JsonNode sharedState = Jsons.jsonNode(ImmutableMap.of("shared-state", 5));
-
-    final AirbyteStateMessage existingStateMessage = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.GLOBAL)
-        .withGlobal(new AirbyteGlobalState().withSharedState(sharedState)
-            .withStreamStates(Arrays.asList(stateMessageFromRefreshStream, stateMessageFromNonRefreshStream)));
-
-    final StateWrapper stateWrapper = new StateWrapper().withStateType(StateType.GLOBAL).withGlobal(existingStateMessage);
-
-    when(statePersistence.getCurrentState(STANDARD_SYNC.getConnectionId())).thenReturn(Optional.of(stateWrapper));
-
-    jobCreator =
-        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper, statePersistence,
-            refreshJobStateUpdater,
-            streamRefreshesRepository);
-
-    final Optional<String> expectedSourceType = Optional.of("database");
-    final ResourceRequirements destStderrResourceRequirements = new ResourceRequirements().withCpuLimit("10");
-    final ResourceRequirements destStdinResourceRequirements = new ResourceRequirements().withCpuLimit("11");
-    final ResourceRequirements destStdoutResourceRequirements = new ResourceRequirements().withCpuLimit("12");
-    final ResourceRequirements heartbeatResourceRequirements = new ResourceRequirements().withCpuLimit("13");
-    final ResourceRequirements srcStderrResourceRequirements = new ResourceRequirements().withCpuLimit("14");
-    final ResourceRequirements srcStdoutResourceRequirements = new ResourceRequirements().withCpuLimit("14");
-
-    mockResourcesRequirement(expectedSourceType,
-        destStderrResourceRequirements,
-        destStdinResourceRequirements,
-        destStdoutResourceRequirements,
-        heartbeatResourceRequirements,
-        srcStderrResourceRequirements,
-        srcStdoutResourceRequirements);
-
-    final SyncResourceRequirements expectedSyncResourceRequirements = getExpectedResourcesRequirement(destStderrResourceRequirements,
-        destStdinResourceRequirements,
-        destStdoutResourceRequirements,
-        heartbeatResourceRequirements,
-        srcStderrResourceRequirements,
-        srcStdoutResourceRequirements);
-
-    final RefreshConfig refreshConfig = getRefreshConfig(expectedSyncResourceRequirements, List.of(
-        new StreamDescriptor().withName(streamToRefresh).withNamespace(streamNamespace),
-        new StreamDescriptor().withName(streamToRefresh2).withNamespace(streamNamespace)));
-
-    final JobConfig jobConfig = new JobConfig()
-        .withConfigType(ConfigType.REFRESH)
-        .withRefresh(refreshConfig);
-
-    jobCreator.createRefreshConnection(
-        STANDARD_SYNC,
-        SOURCE_IMAGE_NAME,
-        SOURCE_PROTOCOL_VERSION,
-        DESTINATION_IMAGE_NAME,
-        DESTINATION_PROTOCOL_VERSION,
-        List.of(STANDARD_SYNC_OPERATION),
-        PERSISTED_WEBHOOK_CONFIGS,
-        STANDARD_SOURCE_DEFINITION_WITH_SOURCE_TYPE,
-        STANDARD_DESTINATION_DEFINITION,
-        SOURCE_DEFINITION_VERSION,
-        DESTINATION_DEFINITION_VERSION,
-        WORKSPACE_ID,
-        List.of(new StreamRefresh(UUID.randomUUID(), STANDARD_SYNC.getConnectionId(), streamToRefresh, streamNamespace, null),
-            new StreamRefresh(UUID.randomUUID(), STANDARD_SYNC.getConnectionId(), streamToRefresh2, streamNamespace, null)));
-
-    final String expectedScope = STANDARD_SYNC.getConnectionId().toString();
-    verify(jobPersistence).enqueueJob(expectedScope, jobConfig);
-
-    final AirbyteStateMessage expectedStateMessage = new AirbyteStateMessage()
-        .withType(AirbyteStateMessage.AirbyteStateType.GLOBAL)
-        .withGlobal(new AirbyteGlobalState().withSharedState(null).withStreamStates(Collections.emptyList()));
-
-    final StateWrapper expected = new StateWrapper().withStateType(StateType.GLOBAL).withGlobal(expectedStateMessage);
-    verify(statePersistence).updateOrCreateState(STANDARD_SYNC.getConnectionId(), expected);
-    verify(streamRefreshesRepository).deleteByConnectionIdAndStreamNameAndStreamNamespace(STANDARD_SYNC.getConnectionId(), streamToRefresh,
-        streamNamespace);
-    verify(streamRefreshesRepository).deleteByConnectionIdAndStreamNameAndStreamNamespace(STANDARD_SYNC.getConnectionId(), streamToRefresh2,
-        streamNamespace);
-  }
-
-  @Test
   void testFailToCreateRefreshIfNotAllowed() {
     final FeatureFlagClient mFeatureFlagClient = mock(TestClient.class);
     when(mFeatureFlagClient.boolVariation(eq(ActivateRefreshes.INSTANCE), any())).thenReturn(false);
     jobCreator =
-        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper, statePersistence,
+        new DefaultJobCreator(jobPersistence, resourceRequirementsProvider, mFeatureFlagClient, generationBumper,
+            catalogGenerationSetter,
+            statePersistence,
             refreshJobStateUpdater,
             streamRefreshesRepository);
 
@@ -868,9 +676,11 @@ class DefaultJobCreatorTest {
         DESTINATION_PROTOCOL_VERSION,
         List.of(STANDARD_SYNC_OPERATION),
         null,
-        new StandardSourceDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
-        new StandardDestinationDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
-            new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(destResourceRequirements)))),
+        new StandardSourceDefinition().withSourceDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
+        new StandardDestinationDefinition().withDestinationDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
+                new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(destResourceRequirements)))),
         SOURCE_DEFINITION_VERSION,
         DESTINATION_DEFINITION_VERSION,
         WORKSPACE_ID);
@@ -941,7 +751,8 @@ class DefaultJobCreatorTest {
         .withMemoryRequest("800Mi");
 
     final var jobCreator = new DefaultJobCreator(jobPersistence, resourceRequirementsProvider,
-        new TestClient(Map.of(DestResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper, statePersistence,
+        new TestClient(Map.of(DestResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper, catalogGenerationSetter,
+        statePersistence,
         refreshJobStateUpdater,
         streamRefreshesRepository);
 
@@ -955,9 +766,11 @@ class DefaultJobCreatorTest {
         DESTINATION_PROTOCOL_VERSION,
         List.of(STANDARD_SYNC_OPERATION),
         null,
-        new StandardSourceDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
-        new StandardDestinationDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
-            new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
+        new StandardSourceDefinition().withSourceDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
+        new StandardDestinationDefinition().withDestinationDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
+                new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
         SOURCE_DEFINITION_VERSION,
         DESTINATION_DEFINITION_VERSION,
         WORKSPACE_ID);
@@ -1007,7 +820,8 @@ class DefaultJobCreatorTest {
         .withMemoryRequest("800Mi");
 
     final var jobCreator = new DefaultJobCreator(jobPersistence, resourceRequirementsProvider,
-        new TestClient(Map.of(OrchestratorResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper, statePersistence,
+        new TestClient(Map.of(OrchestratorResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper,
+        catalogGenerationSetter, statePersistence,
         refreshJobStateUpdater, streamRefreshesRepository);
 
     final var standardSync = new StandardSync()
@@ -1033,8 +847,10 @@ class DefaultJobCreatorTest {
         DESTINATION_PROTOCOL_VERSION,
         List.of(STANDARD_SYNC_OPERATION),
         null,
-        new StandardSourceDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
-        new StandardDestinationDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(destResourceRequirements)),
+        new StandardSourceDefinition().withSourceDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
+        new StandardDestinationDefinition().withDestinationDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(destResourceRequirements)),
         SOURCE_DEFINITION_VERSION,
         DESTINATION_DEFINITION_VERSION,
         WORKSPACE_ID);
@@ -1084,7 +900,8 @@ class DefaultJobCreatorTest {
         .withMemoryRequest("800Mi");
 
     final var jobCreator = new DefaultJobCreator(jobPersistence, resourceRequirementsProvider,
-        new TestClient(Map.of(SourceResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper, statePersistence,
+        new TestClient(Map.of(SourceResourceOverrides.INSTANCE.getKey(), Jsons.serialize(overrides))), generationBumper,
+        catalogGenerationSetter, statePersistence,
         refreshJobStateUpdater, streamRefreshesRepository);
 
     jobCreator.createSyncJob(
@@ -1097,9 +914,11 @@ class DefaultJobCreatorTest {
         DESTINATION_PROTOCOL_VERSION,
         List.of(STANDARD_SYNC_OPERATION),
         null,
-        new StandardSourceDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
-            new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
-        new StandardDestinationDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(destResourceRequirements)),
+        new StandardSourceDefinition().withSourceDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
+                new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
+        new StandardDestinationDefinition().withDestinationDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(destResourceRequirements)),
         SOURCE_DEFINITION_VERSION,
         DESTINATION_DEFINITION_VERSION,
         WORKSPACE_ID);
@@ -1141,7 +960,8 @@ class DefaultJobCreatorTest {
         .withMemoryRequest("800Mi");
 
     final var jobCreator = new DefaultJobCreator(jobPersistence, resourceRequirementsProvider,
-        new TestClient(Map.of(DestResourceOverrides.INSTANCE.getKey(), Jsons.serialize(weirdness))), generationBumper, statePersistence,
+        new TestClient(Map.of(DestResourceOverrides.INSTANCE.getKey(), Jsons.serialize(weirdness))), generationBumper,
+        catalogGenerationSetter, statePersistence,
         refreshJobStateUpdater,
         streamRefreshesRepository);
 
@@ -1155,9 +975,11 @@ class DefaultJobCreatorTest {
         DESTINATION_PROTOCOL_VERSION,
         List.of(STANDARD_SYNC_OPERATION),
         null,
-        new StandardSourceDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
-        new StandardDestinationDefinition().withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
-            new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
+        new StandardSourceDefinition().withSourceDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withDefault(sourceResourceRequirements)),
+        new StandardDestinationDefinition().withDestinationDefinitionId(UUID.randomUUID())
+            .withResourceRequirements(new ActorDefinitionResourceRequirements().withJobSpecific(List.of(
+                new JobTypeResourceLimit().withJobType(JobType.SYNC).withResourceRequirements(originalReqs)))),
         SOURCE_DEFINITION_VERSION,
         DESTINATION_DEFINITION_VERSION,
         WORKSPACE_ID);
